[package]
version = "1.0.0"
authors = [ "Taylor Spencer <tayspen72@gmail.com>" ]
description = "Peripheral access API for STM32F303X Microcontrollers"
keywords = ["no-std", "arm", "cortex-m", "STM32", "STM32F3", "STM32F303"]
license = "MIT OR Apache-2.0"
name = "stm32f303_pac"
repository = "https://github.com/tayspen72/stm32f303-pac"
edition = "2018"

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.3"
cortex-m = "0.7.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.1"

[features]
rt = ["cortex-m-rt/device"]